Stop using commons-io in flow-server
Removes one more third party dependency. Mostly replaced with modern JDK methods.