@@ -19,10 +19,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 
-import org.apache.commons.io.IOUtils;
-
 import static com.vaadin.flow.server.frontend.FrontendUtils.INDEX_HTML;
-import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  * Generate <code>index.html</code> if it is missing in frontend folder.
@@ -49,7 +46,7 @@ public class TaskGenerateIndexHtml extends AbstractTaskClientGenerator {
     protected String getFileContent() throws IOException {
         try (InputStream indexStream = getClass()
                 .getResourceAsStream(INDEX_HTML)) {
-            return IOUtils.toString(indexStream, UTF_8);
+            return new String(indexStream.readAllBytes());
         }
     }
 
